--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,14 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment">
+    tools:context=".home.ListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Spinner
+        <Button
             android:id="@+id/sort_button"
+            android:layout_width="90sp"
+            android:layout_height="wrap_content"
+            android:text="Sort"
+            app:layout_constraintBottom_toBottomOf="@id/sort_spinner"
+            app:layout_constraintEnd_toEndOf="@id/filter_button"
+            app:layout_constraintStart_toStartOf="@id/filter_button"
+            app:layout_constraintTop_toTopOf="@id/sort_spinner"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Spinner
+            android:id="@+id/sort_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -22,7 +33,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/filter_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -32,7 +43,7 @@
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sort_button" />
+            app:layout_constraintTop_toBottomOf="@+id/sort_spinner" />
 
         <Button
             android:id="@+id/filter_button"
@@ -40,9 +51,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20sp"
             android:text="Filter"
-            app:layout_constraintBottom_toBottomOf="@id/spinner2"
+            app:layout_constraintBottom_toBottomOf="@id/filter_spinner"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/spinner2" />
+            app:layout_constraintTop_toTopOf="@id/filter_spinner" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -51,8 +62,13 @@
             android:layout_marginTop="150dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/filter_spinner"
+            app:layout_constraintTop_toBottomOf="@id/sort_spinner"/>
 
         <EditText
             android:id="@+id/editTextFilter"
@@ -63,10 +79,10 @@
             android:hint="Search"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toBottomOf="@id/spinner2"
+            app:layout_constraintBottom_toBottomOf="@id/filter_spinner"
             app:layout_constraintEnd_toStartOf="@id/filter_button"
-            app:layout_constraintStart_toEndOf="@id/spinner2"
-            app:layout_constraintTop_toTopOf="@id/spinner2"
+            app:layout_constraintStart_toEndOf="@id/filter_spinner"
+            app:layout_constraintTop_toTopOf="@id/filter_spinner"
             tools:layout_constraintBottom_toBottomOf="@id/spinner2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
