--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,8 +15,7 @@
         android:title="@string/action_createItem"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/Logout"
+        android:id="@+id/action_logout"
         android:title="Logout"
-        app:showAsAction="never"
-        />
+        app:showAsAction="never"/>
 </menu>
