--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,84 +6,76 @@
     android:layout_height="match_parent"
     tools:context=".home.ListFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/sort_button"
-            android:layout_width="90sp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sort"
-            app:layout_constraintBottom_toBottomOf="@id/sort_spinner"
-            app:layout_constraintEnd_toEndOf="@id/filter_button"
-            app:layout_constraintStart_toStartOf="@id/filter_button"
-            app:layout_constraintTop_toTopOf="@id/sort_spinner"
-            app:layout_constraintVertical_bias="0.0" />
+            android:padding="16dp">
 
-        <Spinner
-            android:id="@+id/sort_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:entries="@array/sort_array"
-            android:minHeight="48dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Spinner
+                android:id="@+id/sort_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/sort_array"
+                android:minHeight="48dp" />
 
-        <Spinner
-            android:id="@+id/filter_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="34dp"
-            android:layout_marginBottom="30dp"
-            android:entries="@array/filter_array"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sort_spinner" />
+            <Button
+                android:id="@+id/sort_button"
+                android:layout_width="90sp"
+                android:layout_height="wrap_content"
+                android:text="Sort" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/filter_button"
-            android:layout_width="90sp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20sp"
-            android:text="Filter"
-            app:layout_constraintBottom_toBottomOf="@id/filter_spinner"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/filter_spinner" />
+            android:padding="16dp">
+
+            <Spinner
+                android:id="@+id/filter_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/filter_array"
+                android:minHeight="48dp" />
+
+            <EditText
+                android:id="@+id/editTextFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Search"
+                android:inputType="textPersonName"
+                android:minHeight="48dp" />
+
+            <Button
+                android:id="@+id/filter_button"
+                android:layout_width="90sp"
+                android:layout_height="wrap_content"
+                android:text="Filter" />
+        </LinearLayout>
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="150dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/filter_spinner"
-            app:layout_constraintTop_toBottomOf="@id/sort_spinner"/>
+            app:cardCornerRadius="16dp"
+            app:cardElevation="8dp"
+            android:background="?attr/selectableItemBackground"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <EditText
-            android:id="@+id/editTextFilter"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30sp"
-            android:layout_marginEnd="20dp"
-            android:hint="Search"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toBottomOf="@id/filter_spinner"
-            app:layout_constraintEnd_toStartOf="@id/filter_button"
-            app:layout_constraintStart_toEndOf="@id/filter_spinner"
-            app:layout_constraintTop_toTopOf="@id/filter_spinner"
-            tools:layout_constraintBottom_toBottomOf="@id/spinner2" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </FrameLayout>
