--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Title"
+                android:layout_marginLeft="30dp"
                 android:textSize="18sp" />
 
             <TextView
@@ -34,6 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Description"
+                android:layout_marginLeft="30dp"
+
                 android:textSize="14sp" />
 
         </LinearLayout>
