--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_listFragment_to_FirstFragment"
             app:destination="@id/firstFragment" />
+        <argument
+            android:name="userEmail"
+            app:argType="string" />
     </fragment>
 
 </navigation>
